--- a/intro/package.json
+++ b/intro/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "This folder contains sample files for exploring VSCode.",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/Server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.9.0"
+  }
 }
