--- a/intro/package.json
+++ b/intro/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This folder contains sample files for exploring VSCode.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/Server.js"
   },
