--- a/js/.vscode/launch.json
+++ b/js/.vscode/launch.json
@@ -7,15 +7,8 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "lauch main file",
+            "name": "Server debug",
             "program": "${workspaceFolder}/src/back/Server.js"
-        },
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "file:///C:/work/VscCourseRes/js/src/front/index.html",
-            "webRoot": "${workspaceFolder}/src/front"
         }
     ]
 }
