--- a/ts/package.json
+++ b/ts/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/node": "^20.9.0",
     "eslint": "^8.53.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
